--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,10 @@
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10vw;
+}
+
 .vertical-center {
   display: flex;
   align-items: center;
