--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.sidebar {
+  margin: 50px;
+}
+
+.maps {
+  padding-left: 15px;
+  padding-right: 15px;
+}
