--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,12 +1,2 @@
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 10vw;
-}
-
-.vertical-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+body{margin:0;padding:0;font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}code{font-family:source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace}.vertical-center{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.faqTitle{color:#10464c;font-weight:bold;border-style:solid;margin:20}.faqIcon{margin-right:55%}.questionStyle{color:#505050;font-weight:bold;font-size:19px}.answerStyle{font-style:oblique;font-size:18px;margin:20px}
+/*# sourceMappingURL=main.css.map */
