--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -18,3 +18,11 @@ code {
   align-items: center;
   justify-content: center;
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: right;
+  font-style: italic;
+}
